# ai-friends

./: .gitignore  README.md  main.py  pyproject.toml
app/: config.py  graph.py  guardrails.py  main.py  personas.py  prompts.py  state.py  summarizer.py
app/static/: index.html
