[project]
name = "ai-friends"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "langchain>=1.2.10",
    "langgraph>=1.0.8",
    "openai>=2.21.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
